# ascii-art

./: .gitignore  404.html  LICENSE  Makefile  README.md  ascii_art.py  ascii_art_cli.py  console.py  image_ops.py  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml  tasks.py  utils.py  weigh.py  weight.py
.github/workflows/: build.yml  publish.yml
MODULE_NAME/: __init__.py  __main__.py  main.py
MODULE_NAME/test/: test_bar.py  test_foo.py
api/: index.html
ascii_art/: __init__.py  __main__.py  main.py  test.py
docs/: README.md  api.md  documentation.md
documentation/: index.html
examples/chars/: alphanumeric_punctuation.txt  simple.txt
examples/input/: all.txt
examples/output/: einstein.txt  einstein_all_normalize.txt  einstein_inverted.txt  einstein_simple.txt  einstein_simple_normalize.txt  octocat.txt  octocat_all.txt  octocat_all_invert.txt  octocat_all_invert_normalize.txt  octocat_all_normalize.txt  octocat_inverted.txt  octocat_simple.txt  octocat_simple_normalize.txt  octocat_small.txt  octocat_tiny.txt
input/: chars.txt  chars2.txt
output/: einstein.txt  octocat.txt
reference/ascii_art/: index.html
search/: search_index.json
testing/: test.py
tests/: test.py  test_foo.py  test_image_to_ascii.py
