[tool.poetry]
name = "ascii-art-cli"
version = "1.4.0"
description = "ASCII art generator with multiple customization parameters"
authors = ["Dawson Booth <pypi@dawsonbooth.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dawsonbooth/ascii-art"
repository = "https://github.com/dawsonbooth/ascii-art"
documentation = "https://dawsonbooth.github.io/ascii-art"
keywords = ["cli", "console", "ascii", "art", "font", "image"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = ["LICENSE"]
packages = [{ include = "ascii_art" }]

[tool.poetry.scripts]
ascii-art = 'ascii_art.__main__:main'

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^22.1.0"
dustpan = "^0.3.2"
flake8 = "^3.8.4"
ghp-import = "^1.0.1"
invoke = "^1.5.0"
isort = "^5.7.0"
mypy = "^0.790"
portray = "^1.5.2"
pytest = "^6.2.1"
rope = "^0.18.0"

[tool.black]
line-length = 119

[tool.dustpan]
remove-empty-directories = true

[tool.isort]
line_length = 119
profile = "black"

[tool.portray]
modules = ["ascii_art"]

[[tool.portray.extra_markdown_extensions]]
[tool.portray.extra_markdown_extensions.toc]
permalink = true

[[tool.portray.extra_markdown_extensions]]
[tool.portray.extra_markdown_extensions."pymdownx.highlight"]
linenums = true

[tool.portray.mkdocs]
site_name = "ascii-art-cli"
site_url = "https://dawsonbooth.github.io/ascii-art/"
edit_uri = "blob/master/"

markdown_extensions = [
    "admonition",
    "codehilite",
    "extra",
    "pymdownx.details",
    "pymdownx.superfences",
]

nav = [{ Overview = "README.md" }]

[tool.portray.mkdocs.theme]
name = "material"
palette = { primary = "blue grey", accent = "red" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
